--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,8 @@ Thumbs.db
 
 # Folder config file
 Desktop.ini
-
+Makefile*
+Makefile.*
 
 #############
 ## Python
@@ -161,3 +162,5 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+/.vs
+/.qmake.stash
